@@ -47,6 +47,17 @@ public:
 	}
 };
 
+class DffDsdUint64 {
+	uint32_t hi;
+	uint32_t lo;
+
+public:
+	constexpr uint64_t Read() const {
+		return (uint64_t(FromBE32(hi)) << 32) |
+			uint64_t(FromBE32(lo));
+	}
+};
+
 bool
 dsdlib_read(Decoder *decoder, InputStream &is,
 	    void *data, size_t length);
